@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (future 6.0.2, SVN branch-6-0):
 ---------------------------
 
+- Raster layer fails to be drawn if the window is less than half a pixel (#4172)
+
 - Fixed SLD with FILTER doesn't apply properly to database layers (#4112)
 
 - Fixed a problem with calls to labelInImage() (maplabel.c) when label gutter
